Added validations and custom exceptions